tests/NormalTests/paczka1/small_fuzzy/54171251.err
Error in line 4: S57 A874 *57,0
Error in line 8: S57 S72K 59,8
Error in line 3: S57 A874 60,9
